--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,17 @@
     },
     "repositories": [
         {
-            "type": "git",
-            "url": "https://github.com/PHP-FFMpeg/BinaryDriver.git"
+            "type":"package",
+            "package": {
+                "name": "php-ffmpeg/binary-driver",
+                "version":"dev-master",
+
+                "source": {
+                    "url": "https://github.com/PHP-FFMpeg/BinaryDriver.git",
+                    "type": "git",
+                    "reference":"0d423721af87e17fe8b0a71d772dd6d26883454e"
+                }
+            }
         }
     ],
     "suggest": {
