--- a/composer.json
+++ b/composer.json
@@ -33,25 +33,17 @@
     ],
     "require": {
         "php": "^5.3.9 || ^7.0",
-        "php-ffmpeg/binary-driver": "dev-master",
+        "alchemy/binary-driver": "^1.5",
         "doctrine/cache": "^1.0",
         "evenement/evenement": "^2.0 || ^1.0",
-        "neutron/temporary-filesystem": "^2.1.1"
+        "neutron/temporary-filesystem": "^2.1.1",
+        "php-ffmpeg/binary-driver": "dev-master"
     },
-    "repositories": [
+    "repositories": [    
         {
-            "type":"package",
-            "package": {
-                "name": "php-ffmpeg/binary-driver",
-                "version":"dev-master",
-
-                "source": {
-                    "url": "https://github.com/PHP-FFMpeg/BinaryDriver.git",
-                    "type": "git",
-                    "reference":"0d423721af87e17fe8b0a71d772dd6d26883454e"
-                }
+                "type": "git",
+                "url": "https://github.com/PHP-FFMpeg/BinaryDriver.git"
             }
-        }
     ],
     "suggest": {
         "php-ffmpeg/extras": "A compilation of common audio & video drivers for PHP-FFMpeg"
